# DIM_test

./: CMakeLists.txt  README.md
Client_test/: CMakeLists.txt  ClientMain.cpp  TestClient.cpp  TestClient.h
DIM_test/: CMakeLists.txt  DIM_test.cpp
Server_test/: CMakeLists.txt  ServerMain.cpp  TestServer.cpp  TestServer.h
TestSubdetector/: CMakeLists.txt  SubdetectorMain.cpp
include/dim/: dim.h
lib/: dim.lib
